# ircbot

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  README.md  TESTING.md  build.sh  cloc.sh  format-all.sh  format.sh
cmake/: default_paths.hpp.in  git-info.cmake  plugin.cmake  settings.cmake  version.cmake  version.conf  version_configuration.hpp.in
config/: example1.json  kolkcc.yaml  local.json  ngircd.conf
docker/alpine/: Dockerfile
docker/debian/: Dockerfile
docker/debian-arm/: Dockerfile
docker/fedora/: Dockerfile
docker/ubuntu/: Dockerfile
docker/ubuntu-arm/: Dockerfile
docker/user/ubuntu18.04/: Dockerfile
docs/: .gitignore  CMakeLists.txt  Doxyfile.in
git-hooks/: pre-commit
include/ircbot/: admin_port.hpp  bot.hpp  bot_config.hpp  cerr_log_output.hpp  client.hpp  clog_log_output.hpp  command_parser.hpp  command_plugin.hpp  config.hpp  core.hpp  cout_log_output.hpp  dependency_container.hpp  file_log_output.hpp  helpers.hpp  helpers.impl.hpp  init_plugin.hpp  interpreter.hpp  interpreter_result.hpp  irc_client.hpp  irc_command.hpp  irc_interpreter.hpp  irc_interpreter_result.hpp  irc_message.hpp  irc_parser.hpp  log_level.hpp  log_output.hpp  logger.hpp  logger.impl.hpp  logger_macros.hpp  lua_plugin.hpp  output_plugin.hpp  parser_config.hpp  ping_plugin.hpp  plugin.hpp  plugin_config.hpp  plugin_graph.hpp  plugin_impl.hpp  plugin_loader.hpp  plugin_manager.hpp  plugin_runner.hpp  (+11 more)
include/ircbot/lua/: state.hpp  vm.hpp
include/ircbot/network/: basic_client.hpp  basic_server.hpp  buffer.hpp  client.hpp  client.impl.hpp  context_provider.hpp  endpoint.hpp  endpoint.impl.hpp  server.hpp  server.impl.hpp  tcp_client.hpp  tcp_server.hpp  timer.hpp
include/pyircbot/: bot.hpp  helpers.hpp  plugin.hpp
packaging/deb/: ircbot.dsc
packaging/deb/debian/: changelog  control  rules
packaging/rpm/: ircbot.spec
packaging/scripts/: deb.sh  rpm.sh
plugins/: CMakeLists.txt
plugins/clipboard/: CMakeLists.txt  clipboard.cpp  clipboard.hpp
plugins/helloworld/: CMakeLists.txt  helloworld.cpp  helloworld.hpp
plugins/init/: CMakeLists.txt  init.cpp  init.hpp
plugins/join/: CMakeLists.txt  join.cpp  join.hpp
plugins/lua/: hello.lua
plugins/ping/: CMakeLists.txt  ping.cpp  ping.hpp
plugins/simple_commands/: CMakeLists.txt  simple_commands.cpp  simple_commands.hpp
plugins/uptime/: CMakeLists.txt  helloworld.cpp  uptime.cpp  uptime.hpp
program/: CMakeLists.txt  client.cpp  ircbot.cpp  ircbotctl.cpp
protobuf/: admin.proto  control.proto  init.proto  irc_message.proto  message.proto  tcp_server.proto
py-plugins/: .gitignore  kernel.py  leettime.py  links.py  osuptime.py  stallman.py  wg21.py
pyircbot/: CMakeLists.txt  bot.cpp  helpers.cpp  plugin.cpp  pyircbot.cpp  pythonpath.py
releases/: v0.1.0-dev.md
source/: admin_port.cpp  bot.cpp  cerr_log_output.cpp  client.cpp  clog_log_output.cpp  command_parser.cpp  command_plugin.cpp  config.cpp  core.cpp  cout_log_output.cpp  dependency_container.cpp  file_log_output.cpp  helpers.cpp  init_plugin.cpp  interpreter.cpp  irc_client.cpp  irc_command.cpp  irc_interpreter.cpp  irc_interpreter_result.cpp  irc_message.cpp  irc_parser.cpp  log_level.cpp  log_output.cpp  logger.cpp  lua_plugin.cpp  main.cpp  output_plugin.cpp  ping_plugin.cpp  plugin.cpp  plugin_graph.cpp  plugin_loader.cpp  plugin_manager.cpp  plugin_runner.cpp  session.cpp  so_plugin.cpp  so_plugin_handler.cpp  tcp_client.cpp  tcp_plugin.cpp  tcp_plugin_server.cpp  tcp_server.cpp  (+3 more)
source/lua/: state.cpp
source/network/: buffer.cpp  client.cpp  context_provider.cpp  endpoint.cpp  server.cpp  tcp_client.cpp  tcp_server.cpp  timer.cpp
tests/: CMakeLists.txt  client_test.cpp  command_parser_test.cpp  irc_interpreter.cpp  irc_parser_test.cpp  network_buffer.cpp  network_server_client.cpp  plugin_loader_test.cpp  tcp_server.cpp  timer_test.cpp
